added JWT authentication to the project